# r2lab-sidecar

./: .envrc  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  sidecar-server.py  sidecar.js  sidecar.py
doc/: AA-overview.md  install-sidecar.md
examples/: animate.py  images-and-usrps.py
python/: animate.py  available.py  images-and-usrps.py
r2lab_sidecar/: __init__.py  __main__.py  server.py  version.py
systemd/: r2lab-sidecar.service  sidecar.service
web/: sidecar-client.css  sidecar-client.html  sidecar-client.js
