[project]
name = "r2lab-sidecar"
version = "0.9.2"
description = "Testbed Management Companion for R2Lab"
license = "CC-BY-NC-4.0"
readme = "README.md"
authors = [
    {name = "Thierry Parmentelat", email = "thierry.parmentelat@inria.fr"},
]
keywords=['R2lab', 'networking', 'testbed', 'wireless']
requires-python = ">=3.10"
dependencies = [
    'websockets',
]


[tool.setuptools.package_data]
r2lab_sidecar= [
    "web/sidecar-client.*",
]

[tool.setuptools.data_files]
# xxx systemd/r2lab-sidecar.service -> /usr/systemd/system/r2lab-sidecar.service
'/usr/systemd/system' = ['systemd/r2lab-sidecar.service']

[project.scripts]
r2lab-sidecar = "r2lab_sidecar.__main__:main"


# [project.optional-dependencies]
# mapdataframe = ["pandas"]
# tests = ["pytest"]


[project.urls]
Homepage = "https://github.com/r2lab.inria.fr"
# never got around to that
# Documentation = "https://r2lab-sidecar.readthedocs.io"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
